Update span list api spec
